--- a/estudo-pt.5
+++ b/estudo-pt.5
@@ -1,31 +1,59 @@
-#  Escreva um programa que pergunte o salário do funcionário e calcule  
-# o valor do aumento. Para salários superiores a R$ 1.250,00, calcule um 
-# aumento de  10%. Para os inferiores ou iguais, de 15%. 
+exemplo do livro logo abaixo 
+# minutos=int(input("Quantos minutos você utilizou este mês:"))
+# if minutos < 200: 
+#     preço = 0.20 
+# else:
+#  if minutos < 400: 
+#   preço = 0.18 
+#  else: 
+#     preço = 0.15 
+# print("Você vai pagar este mês: R$%6.2f" % (minutos * preço))
 
-#variaveis 
-# salario = float(input('qual o seu salario ? :'))
-# base = salario 
-# aumento = 0
-# # calculo
-# if base > 1250 :
-#     aumento = aumento + ((base - 1250) * 0.1)
+# outro exemplo 
+# categoria = int(input("Digite a categoria do produto:"))
+# if categoria == 1:
+#  preço = 10
+# else:
+#  if categoria == 2:
+#   preço = 18
+#  else:
+#   if categoria == 3:
+#    preço = 23
+#   else:
+#    if categoria == 4:
+#      preço = 26
+#    else:
+#     if categoria == 5:
+#       preço = 31
+#     else:
+#      print("Categoria inválida, digite um valor entre 1 e 5!")
+#  preço = preço
+#  print("O preço do produto é: R$%6.2f" % preço)
 
-# if base <= 1250 : 
-#     aumento = aumento + ((base - 1250 ) * 0.15)
-# print(" aumento salarial de R$: %4.2f" % ( aumento))
+# entrada = int(input("digite um numero : "))
+# entrada2 = int(input("digite outro numero : "))
+# operacao = input(" digite -,+, * ou / : ")
 
-# escreva um codigo que pergunte ao usuario, qunntos km ele quer viajar 
-#  calcule o codigo para que cobre viagens
-# igual ou inferior a 200km e se maior cobre R$ 0.50 por km
+# # soma
+# print(entrada + entrada2)
+# #divisão
+# print (entrada / entrada2)
+# #subtração 
+# print (entrada - entrada2)
+# #multiplicação 
+# print (entrada * entrada2)
 
-# f(<200) = 0.50 + x 
-
-# km = float(input("quantos km voce quer viajar ? : " ))
-# km_x = km 
-
-# if km_x > 200:
-#      km_x + ((km_x + 200 )* 0.45 ) 
-# if km_x <= 200:
-#      km_x + ((km_x + 200)* 0.5)
-
-# print("sua viagem custará %3.2f " % (km_x) )
+# if operacao == "+":
+#    print("{} + {} = ".format(entrada + entrada2))
+#    print(entrada + entrada2)
+# elif operacao == "-":
+#    print("{} - {} = ".format(entrada - entrada2))
+#    print(entrada - entrada2)
+# elif operacao == "*":
+#     print("{} * {} = ".format(entrada * entrada2))
+#     print(entrada * entrada2)
+# elif operacao == "/":
+#    print("{} / {} =".format(entrada / entrada2))
+#    print(entrada / entrada2)
+# else : 
+#    print("voce deve colocar algum operador valido (+,-, *, /)")
